fix: smaller fonts in legend to reduce overflow (nz)

--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -1238,10 +1238,6 @@ video {
   line-height: 1.5rem;
 }
 
-.leading-10 {
-  line-height: 2.5rem;
-}
-
 .\!text-corporate-blue {
   --tw-text-opacity: 1 !important;
   color: rgb(30 55 145 / var(--tw-text-opacity)) !important;
@@ -1621,8 +1617,8 @@ select.bk-input:hover {
   width: 100%;
   --tw-translate-y: 0.25rem;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-  font-size: 0.875rem;
-  line-height: 1.25rem;
+  font-size: 0.75rem;
+  line-height: 1rem;
 }
 
 .bk-btn-group {
